src/test/deca/syntax/invalid/homemade/test/test_pars_inv_main_protected.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 12 : Erreur (no protected dans un main)
//    
//
// Historique:
//    cree le 04/01/2023

{
    protected int x = 8;
}